# cert-parser

./: .gitignore  .pre-commit-config.yaml  README.md  parse_cert.py  pyproject.toml  requirements.txt
cert_parser/: parse_cert.py
