[tool.poetry]
name = "cert-parser"
version = "0.1.0"
description = "tools for parsing RH entitlement manifests"
authors = ["Stuart Sears <stuart@sjsears.com>"]
license = "GPL-3.0-or-later"
include = ["CHANGELOG.md"]
repository = "https://github.com/lanky/cert-parser"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
rhsm = "^1.19.2"
Jinja2 = "^3.1.2"
pip-tools = "^6.12.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.1.0"
pytest = "^7.2.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lanky/cert-parser/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# configuration for the pyright syntax checker/linter
# handles warnings about variables for which we do not yet
# know the type
reportOptionalSubscript = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false

[tool.black]
# project-specific black setup
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '/(\.git|_build|build|dist|\.tox|\.venv)/'

[tool.isort]
# import-sorting plugin
profile = "black"
